[package]
name = "kvs"
version = "0.1.0"
authors = ["EmptCra"]
description = "A key-value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap= {version = "3.2.11",features = ["cargo"]}


[dev-dependencies]
assert_cmd = "0.11.0"
predicates ="1.0.0"
